Perkin-UAT/force-app/main/default/objects/Reference_Transaction_Details__c/Reference_Transaction_Details__c.object-meta.xml
<CustomObject>
    <description>Stores lines of data from SAP regarding a reference transaction related to a Case.</description>
    <label>Reference Transaction Details</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Reference Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Transaction Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>