Perkin-UAT/force-app/main/default/objects/Reference_Transaction_Details__c/fields/BD_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>BD_Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>