Perkin-UAT/force-app/main/default/objects/Reference_Transaction_Details__c/fields/BD_Select_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>BD_Select_Line_Item__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Select Line Item</label>
    <type>Checkbox</type>
</CustomField>