Perkin-UAT/force-app/main/default/objects/Reference_Transaction_Details__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <label>Item No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>