Perkin-UAT/force-app/main/default/objects/Reference_Transaction_Details__c/fields/Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Value__c</fullName>
    <inlineHelpText>Net Value of the order item in document currency.</inlineHelpText>
    <label>Net Value</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>