Perkin-UAT/force-app/main/default/objects/Reference_Transaction_Details__c/fields/Ref_Txn_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_Txn_No__c</fullName>
    <formula>Case__r.Reference_Transaction_Number__c</formula>
    <label>Ref. Txn No.</label>
    <type>Text</type>
</CustomField>