Perkin-UAT/force-app/main/default/objects/Reference_Transaction_Details__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <length>80</length>
    <type>Text</type>
</CustomField>